--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <org.thereachtrust.memorygame_android_app.SquareFrameLayout
         android:id="@+id/gameLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
