--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+
+    <TextView
+        android:id="@+id/newItemButton"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_weight="0"
+        android:background="#D8D4D4"
+        android:gravity="center"
+
+        android:paddingStart="10dp"
+        android:text="Memory Game"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlCompat" />
+
+
     <org.thereachtrust.memorygame_android_app.SquareFrameLayout
         android:id="@+id/gameLayout"
         android:layout_width="match_parent"
         android:layout_height="450dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="90dp"
         android:layout_marginEnd="20dp"
         android:background="#D3CDCD"
         app:layout_constraintEnd_toEndOf="parent"
